--- a/ProgrammingAssignment8/ProgrammingAssignment8.html
+++ b/ProgrammingAssignment8/ProgrammingAssignment8.html
@@ -71,7 +71,7 @@
     varying vec2 fTexCoord;
     const float ambient_coeff = 0.2;
     const float specular_coeff  = 1.0;
-    const float specular_exp    = 100.0;
+    const float specular_exp    = 500.0;
     vec3 Texture(vec2 tc)
     {
       vec3 result;
@@ -185,8 +185,8 @@
     varying vec3 pos;
     varying vec2 fTexCoord;
     uniform sampler2D uTexture;
-    const float ambient_coeff = 0.5;
-    const float specular_coeff  = 0.5;
+    const float ambient_coeff = 0.4;
+    const float specular_coeff  = 0.7;
     const float specular_exp    = 100.0;
 
     void main(void) {
@@ -239,8 +239,62 @@
     varying vec3 pos;
     varying vec2 fTexCoord;
     uniform sampler2D uTexture;
-    const float ambient_coeff = 0.7;
-    const float specular_coeff  = 0.3;
+    const float ambient_coeff = 0.4;
+    const float specular_coeff  = 0.7;
+    const float specular_exp    = 100.0;
+
+    void main(void) {
+        vec4 vNormal = normalize(tModel * vec4(normal,0.0));
+        float diffuse = .5*max(0.0,(dot(normalize(vNormal), vec4(normalize(dLight),0.0))));
+        vec3 l = normalize(dLight);
+        vec3 n = normalize(vNormal.xyz);
+        vec3 e = normalize(-pos);
+        vec3 h = normalize(e+l);
+        vec4 textureColor = texture2D(uTexture,fTexCoord);
+        vec3 tcolor = textureColor.xyz;
+        vec3 ambient_color = ambient_coeff * tcolor;
+        vec3 specular_color = specular_coeff * pow(max(0.0,dot(n,h)),specular_exp) * cLight;
+        gl_FragColor = vec4(ambient_color + specular_color + diffuse * (cLight+tcolor)/2.0, 1.0);
+    }
+</script>
+
+<script id="ground-vs" type="notjs">
+  precision highp float;
+  attribute vec3 vPosition;
+  attribute vec3 vNormal;
+  attribute vec2 vTexCorrd;
+  varying vec3 normal;
+  varying vec3 dLight;
+  varying vec3 cLight;
+  varying mat4 tModel;
+  varying vec3 pos;
+  varying vec2 fTexCoord;
+  uniform mat4 view;
+  uniform mat4 proj;
+  uniform mat4 model;
+  uniform vec3 lightdir;
+  uniform vec3 lightColor;
+  void main(void) {
+      pos = (view * model * vec4(vPosition, 1.0)).xyz;
+      gl_Position = proj * view * model * vec4(vPosition, 1.0);
+      normal = (view * model * vec4(vNormal,0.0)).xyz;
+      dLight = (view * model * vec4(lightdir,0.0)).xyz;
+      cLight = lightColor;
+      tModel = model;
+      fTexCoord = vTexCorrd;
+  }
+</script>
+<script id="ground-fs" type="notjs">
+    precision highp float;
+    varying vec3 normal;
+    varying vec3 dLight;
+    varying vec3 cLight;
+    varying mat4 tModel;
+    varying vec3 pos;
+    varying vec2 fTexCoord;
+    uniform sampler2D uTexture;
+    const float ambient_coeff = 0.4;
+    const float specular_coeff  = 0.7;
     const float specular_exp    = 100.0;
 
     void main(void) {
