--- a/ProgrammingAssignment8/ProgrammingAssignment8.html
+++ b/ProgrammingAssignment8/ProgrammingAssignment8.html
@@ -16,7 +16,7 @@
 <script src="Objects/ground.js"></script>
 <!-- This is where we load the objects for the world -->
 <script src="Objects/Headquarter.js"></script>
-<script src="Objects/Birdsnest.objjs"></script>
+<script src="Objects/Birdsnest.model"></script>
 <script src="Objects/Birdsnest.js"></script>
 <script src="Objects/Watercube.js"></script>
 <!-- I am adding the helicopter -->
