--- a/ProgrammingAssignment9/ProgrammingAssignment9.html
+++ b/ProgrammingAssignment9/ProgrammingAssignment9.html
@@ -13,13 +13,13 @@
 <script src="Libraries/panel.js"></script>
 <script src="Libraries/arcball.js"></script>
 <script src="grobject.js"></script>
+<script src="Objects/Skybox.imgjs"></script>
+<script src="Objects/Skybox.js"></script>
 <script src="Objects/ground.js"></script>
 <!-- This is where we load the objects for the world -->
 <script src="Objects/Headquarter.js"></script>
 <script src="Objects/Birdsnest.objjs"></script>
 <script src="Objects/Birdsnest.js"></script>
-<script src="Objects/Skybox.imgjs"></script>
-<script src="Objects/Skybox.js"></script>
 <script src="Objects/Watercube.js"></script>
 <!-- I am adding the helicopter -->
 <script src="Objects/helicopter.js"></script>
@@ -356,53 +356,54 @@
 <script id="skybox-vs" type="notjs">
   precision highp float;
   attribute vec3 vPosition;
-  attribute vec3 vNormal;
-  attribute vec2 vTexCorrd;
-  varying vec3 normal;
-  varying vec3 dLight;
-  varying vec3 cLight;
-  varying mat4 tModel;
-  varying vec3 pos;
-  varying vec2 fTexCoord;
+  // attribute vec3 vNormal;
+  // varying vec3 normal;
+  // varying vec3 dLight;
+  // varying vec3 cLight;
+  // varying mat4 tModel;
+  // varying vec3 pos;
+  varying vec3 fPosition;
+  uniform mat4 model;
   uniform mat4 view;
   uniform mat4 proj;
-  uniform mat4 model;
-  uniform vec3 lightdir;
-  uniform vec3 lightColor;
+  // uniform vec3 lightdir;
+  // uniform vec3 lightColor;
   void main(void) {
-      pos = (view * model * vec4(vPosition, 1.0)).xyz;
       gl_Position = proj * view * model * vec4(vPosition, 1.0);
-      normal = (view * model * vec4(vNormal,0.0)).xyz;
-      dLight = (view * model * vec4(lightdir,0.0)).xyz;
-      cLight = lightColor;
-      tModel = model;
-      fTexCoord = vTexCorrd;
+      //pos = (view * model * vec4(vPosition, 1.0)).xyz;
+      // normal = (view * model * vec4(vNormal,0.0)).xyz;
+      // dLight = (view * model * vec4(lightdir,0.0)).xyz;
+      // cLight = lightColor;
+      // tModel = model;
+      fPosition = (model*vec4(vPosition,1.0)).xyz;
   }
 </script>
 <script id="skybox-fs" type="notjs">
   precision highp float;
-  varying vec3 normal;
-  varying vec3 dLight;
-  varying vec3 cLight;
-  varying mat4 tModel;
-  varying vec3 pos;
-  varying vec2 fTexCoord;
-  uniform sampler2D uTexture;
+  // varying vec3 normal;
+  // varying vec3 dLight;
+  // varying vec3 cLight;
+  // varying mat4 tModel;
+  // varying vec3 pos;
+  varying vec3 fPosition;
+  uniform samplerCube skybox;
   const float ambient_coeff = 0.4;
   const float specular_coeff  = 0.7;
   const float specular_exp    = 100.0;
 
   void main(void) {
-      vec4 vNormal = normalize(tModel * vec4(normal,0.0));
-      vec3 l = normalize(dLight);
-      vec3 n = normalize(vNormal.xyz);
-      vec3 e = normalize(-pos);
-      vec3 h = normalize(e+l);
-      vec4 textureColor = texture2D(uTexture,fTexCoord);
-      vec3 tcolor = textureColor.xyz;
-      vec3 ambient_color = ambient_coeff * tcolor;
-      vec3 specular_color = specular_coeff * pow(max(0.0,dot(n,h)),specular_exp) * cLight;
-      gl_FragColor = vec4(ambient_color + specular_color, 1.0);
+      // vec4 vNormal = normalize(tModel * vec4(normal,0.0));
+      // vec3 l = normalize(dLight);
+      // vec3 n = normalize(vNormal.xyz);
+      // vec3 e = normalize(-pos);
+      // vec3 h = normalize(e+l);
+      // float diffuse = .5*max(0.0,(dot(normalize(vNormal), vec4(normalize(dLight),0.0))));
+
+
+      vec3 texCube = textureCube(skybox, fPosition).xyz;
+      // vec3 ambient_color = ambient_coeff * texCube;
+      // vec3 specular_color = specular_coeff * pow(max(0.0,dot(n,h)),specular_exp) * cLight;
+      gl_FragColor = vec4(texCube, 1.0);
   }
 </script>
 </html>
