--- a/ProgrammingAssignment9/ProgrammingAssignment9.html
+++ b/ProgrammingAssignment9/ProgrammingAssignment9.html
@@ -176,7 +176,7 @@
       dLight = (view * model * vec4(lightdir,0.0)).xyz;
       cLight = lightColor;
       tModel = model;
-      fTexCoord = vTexCorrd;
+      //fTexCoord = vTexCorrd;
   }
 </script>
 <script id="birdsnest-fs" type="notjs">
@@ -296,22 +296,40 @@
     varying vec3 pos;
     varying vec2 fTexCoord;
     uniform sampler2D uTexture;
-    const float ambient_coeff = 0.4;
-    const float specular_coeff  = 0.7;
-    const float specular_exp    = 100.0;
+    const float ambient_coeff = 0.25;
 
     void main(void) {
+      vec4 textureColor = normalize(texture2D(uTexture,fTexCoord));
+      float specularLightWeighting=32.0;
+      if(textureColor.y/(textureColor.x + textureColor.z + textureColor.y)>0.5){
+        specularLightWeighting = 0.1;
+      }
+      else if(textureColor.z>0.7 && textureColor.y/textureColor.x > 3.0 && textureColor.y<textureColor.z){
+        specularLightWeighting = 0.9;
+      }
+      else if(textureColor.x>0.8 && textureColor.y>0.8 && textureColor.z>0.8){
+        specularLightWeighting = ((textureColor.x+textureColor.y+textureColor.z-2.4)/0.6*0.4)+0.3;
+      }
+      else{
+        specularLightWeighting = (textureColor.x+textureColor.y+textureColor.z)/3.0;
+      }
+      float specular_coeff=specularLightWeighting;
+      float specular_exp=specularLightWeighting*3000.0;
+
         vec4 vNormal = normalize(tModel * vec4(normal,0.0));
-        float diffuse = .5*max(0.0,(dot(normalize(vNormal), vec4(normalize(dLight),0.0))));
+        float diffuse = .7*max(0.0,(dot(normalize(vNormal), vec4(normalize(dLight),0.0))));
         vec3 l = normalize(dLight);
         vec3 n = normalize(vNormal.xyz);
         vec3 e = normalize(-pos);
         vec3 h = normalize(e+l);
-        vec4 textureColor = texture2D(uTexture,fTexCoord);
         vec3 tcolor = textureColor.xyz;
         vec3 ambient_color = ambient_coeff * tcolor;
         vec3 specular_color = specular_coeff * pow(max(0.0,dot(n,h)),specular_exp) * cLight;
-        gl_FragColor = vec4(ambient_color + specular_color + diffuse * (cLight+tcolor)/2.0, 1.0);
+
+        vec3 totalColor = ambient_color + specular_color + diffuse * (cLight+tcolor)/2.0;
+
+
+        gl_FragColor = vec4(totalColor, 1.0);
     }
 </script>
 
