--- a/ProgrammingAssignment9/ProgrammingAssignment9.html
+++ b/ProgrammingAssignment9/ProgrammingAssignment9.html
@@ -19,8 +19,7 @@
 <!-- This is where we load the objects for the world -->
 <script src="Objects/Headquarter.js"></script>
 <script src="Objects/Watercube.js"></script>
-<script src="Objects/Birdsnest.model"></script>
-<script src="Objects/Birdsnest.js"></script>
+
 <!-- I am adding the helicopter -->
 <script src="Objects/helicopter.js"></script>
 <script src="Objects/helicopterMesh.js"></script>
@@ -242,12 +241,14 @@
     varying vec3 pos;
     varying vec2 fTexCoord;
     uniform sampler2D uTexture;
+    uniform sampler2D uNormMap;
     const float ambient_coeff = 0.4;
     const float specular_coeff  = 0.7;
     const float specular_exp    = 100.0;
 
     void main(void) {
-        vec4 vNormal = normalize(tModel * vec4(normal,0.0));
+        vec4 mapNormal = texture2D(uNormMap,fTexCoord);
+        vec4 vNormal = normalize(tModel * mapNormal);
         float diffuse = .5*max(0.0,(dot(normalize(vNormal), vec4(normalize(dLight),0.0))));
         vec3 l = normalize(dLight);
         vec3 n = normalize(vNormal.xyz);
@@ -258,7 +259,8 @@
         vec3 ambient_color = ambient_coeff * tcolor;
         vec3 specular_color = specular_coeff * pow(max(0.0,dot(n,h)),specular_exp) * cLight;
         gl_FragColor = vec4(ambient_color + specular_color + diffuse * (cLight+tcolor)/2.0, 1.0);
-    }
+        gl_FragColor = vec4(diffuse* 2.5 * vec3(0,0.7,0.9), 1.0);
+      }
 </script>
 
 <script id="ground-vs" type="notjs">
