--- a/ProgrammingAssignment9/ProgrammingAssignment9.html
+++ b/ProgrammingAssignment9/ProgrammingAssignment9.html
@@ -16,11 +16,12 @@
 <script src="Objects/Skybox.imgjs"></script>
 <script src="Objects/Skybox.js"></script>
 <script src="Objects/ground.js"></script>
-<!-- This is where we load the objects for the world -->
+
 <script src="Objects/Headquarter.js"></script>
 <script src="Objects/Watercube.js"></script>
+<script src="Objects/Birdsnest.model"></script>
+<script src="Objects/Birdsnest.js"></script>
 
-<!-- I am adding the helicopter -->
 <script src="Objects/helicopter.js"></script>
 <script src="Objects/helicopterMesh.js"></script>
 <script src="Objects/shadows.js"></script>
@@ -193,16 +194,20 @@
 
     void main(void) {
         vec4 vNormal = normalize(tModel * vec4(normal,0.0));
-        float diffuse = .5*max(0.0,(dot(normalize(vNormal), vec4(normalize(dLight),0.0))));
-        vec3 l = normalize(dLight);
-        vec3 n = normalize(vNormal.xyz);
-        vec3 e = normalize(-pos);
-        vec3 h = normalize(e+l);
         vec4 textureColor = texture2D(uTexture,fTexCoord);
         vec3 tcolor = textureColor.xyz;
+        float diffuse = .5*max(0.0,(dot(normalize(vNormal), vec4(normalize(dLight),0.0))));
         vec3 ambient_color = ambient_coeff * tcolor;
-        vec3 specular_color = specular_coeff * pow(max(0.0,dot(n,h)),specular_exp) * cLight;
-        gl_FragColor = vec4(ambient_color + specular_color + diffuse * (cLight+vec3(1,1,1))/2.0, 1.0);
+        vec3 totalColor = ambient_color*2.0 + 0.5*diffuse * (cLight+tcolor)/2.0;
+        if(tcolor.x+tcolor.y+tcolor.z>1.5){
+          vec3 l = normalize(dLight);
+          vec3 n = normalize(vNormal.xyz);
+          vec3 e = normalize(-pos);
+          vec3 h = normalize(e+l);
+          vec3 specular_color = specular_coeff * pow(max(0.0,dot(n,h)),specular_exp) * cLight;
+          totalColor += specular_color+ 0.5*diffuse * (cLight+tcolor)/2.0-ambient_color;
+        }
+        gl_FragColor = vec4(totalColor, 1.0);
     }
 </script>
 
@@ -396,7 +401,7 @@
       // dLight = (view * model * vec4(lightdir,0.0)).xyz;
       // cLight = lightColor;
       // tModel = model;
-      fPosition = (model*vec4(vPosition,1.0)).xyz;
+      fPosition = vPosition;
   }
 </script>
 <script id="skybox-fs" type="notjs">
