--- a/ProgrammingAssignment9/ProgrammingAssignment9.html
+++ b/ProgrammingAssignment9/ProgrammingAssignment9.html
@@ -221,6 +221,7 @@
   varying vec3 cLight;
   varying mat4 tModel;
   varying vec3 pos;
+  varying vec3 fNormal;
   varying vec2 fTexCoord;
   uniform mat4 view;
   uniform mat4 proj;
@@ -230,10 +231,11 @@
   void main(void) {
       pos = (view * model * vec4(vPosition, 1.0)).xyz;
       gl_Position = proj * view * model * vec4(vPosition, 1.0);
-      normal = (view * model * vec4(vNormal,0.0)).xyz;
-      dLight = (view * model * vec4(lightdir,0.0)).xyz;
+      normal = (view * vec4(vNormal,0.0)).xyz;
+      dLight = (view * vec4(lightdir,0.0)).xyz;
+      fNormal = vNormal;
       cLight = lightColor;
-      tModel = model;
+      tModel = view * model;
       fTexCoord = vTexCorrd;
   }
 </script>
@@ -244,27 +246,35 @@
     varying vec3 cLight;
     varying mat4 tModel;
     varying vec3 pos;
+    varying vec3 fNormal;
     varying vec2 fTexCoord;
     uniform sampler2D uTexture;
     uniform sampler2D uNormMap;
-    const float ambient_coeff = 0.4;
-    const float specular_coeff  = 0.7;
-    const float specular_exp    = 100.0;
+    uniform mat4 tnModel;
+    const float ambient_coeff = 0.5;
+    const float specular_coeff  = 0.5;
+    const float specular_exp    = 150.0;
 
     void main(void) {
-        vec4 mapNormal = texture2D(uNormMap,fTexCoord);
-        vec4 vNormal = normalize(tModel * mapNormal);
-        float diffuse = .5*max(0.0,(dot(normalize(vNormal), vec4(normalize(dLight),0.0))));
         vec3 l = normalize(dLight);
-        vec3 n = normalize(vNormal.xyz);
+        vec3 mapNormal = normalize(texture2D(uNormMap,fTexCoord).xyz);
+        if(fNormal.x == -1.0 || fNormal.z == -1.0 || fNormal.y == -1.0){
+          mapNormal = -mapNormal;
+        }
+        vec3 bumpNormal = normalize(tnModel * vec4(fNormal+mapNormal,0.0)).xyz;
+        vec3 shapeNormal = normalize(tnModel * vec4(fNormal+mapNormal*50.0,0.0)).xyz;
+        vec3 n = normalize(bumpNormal);
         vec3 e = normalize(-pos);
         vec3 h = normalize(e+l);
         vec4 textureColor = texture2D(uTexture,fTexCoord);
-        vec3 tcolor = textureColor.xyz;
-        vec3 ambient_color = ambient_coeff * tcolor;
+        vec3 tcolor=vec3(0,0.7,1.0);
+        tcolor=textureColor.xyz;
+        float diffuse = .4*max(0.0,(dot(n, l)));
+        vec3 ambient_color = ambient_coeff*max(0.0,(dot(shapeNormal, normal))) * tcolor;
         vec3 specular_color = specular_coeff * pow(max(0.0,dot(n,h)),specular_exp) * cLight;
-        gl_FragColor = vec4(ambient_color + specular_color + diffuse * (cLight+tcolor)/2.0, 1.0);
-        //gl_FragColor = vec4(diffuse* 2.5 * vec3(0,0.7,0.9), 1.0);
+        vec3 totalColor = ambient_color + specular_color + diffuse * (cLight+tcolor)/2.0;
+
+        gl_FragColor = vec4(totalColor, 1.0);
       }
 </script>
 
