still not working

--- a/ProgrammingAssignment9/ProgrammingAssignment9.html
+++ b/ProgrammingAssignment9/ProgrammingAssignment9.html
@@ -470,6 +470,8 @@
   uniform mat4 proj;
 
   attribute vec3 vPosition;
+  attribute vec3 vNormal;
+  attribute vec2 vTexCorrd;
   varying vec3 fPosition;
 
   void main(){
