--- a/ProgrammingAssignment10/ProgrammingAssignment10.html
+++ b/ProgrammingAssignment10/ProgrammingAssignment10.html
@@ -80,8 +80,9 @@
     varying vec3 pos;
     varying vec2 fTexCoord;
     uniform vec2 shadowRangeNearFar;
-    uniform sampler2D shadowMapCube;
+    uniform sampler2D shadowMap;
     uniform vec3 lightPosition;
+    uniform mat4 shadowMVP;
     const float ambient_coeff = 0.2;
     const float specular_coeff  = 1.0;
     const float specular_exp    = 500.0;
@@ -109,16 +110,19 @@
         vec3 specular_color = specular_coeff * pow(max(0.0,dot(n,h)),specular_exp) * cLight;
         vec3 totalColor = Texture(fTexCoord)+ambient_color;
 
-        //shadow
-        vec3 lightToFrag = (fPosition - lightPosition);
-        float lightFragDistance = length(lightToFrag);
-        float shadowRange = shadowRangeNearFar.y - shadowRangeNearFar.x;
-        float normalizedLFDist = (lightFragDistance - shadowRangeNearFar.x)/shadowRange;
-        float shadowValue = texture2D(shadowMapCube, fTexCoord).x;
+        // vec2 texc = ((shadowMVP*vec4(fPosition,1.0)).xy+1.0)/2.0;
+        // float shadowValue = texture2D(shadowMap, texc).x;
+        // vec3 lightToFrag = vec4(fPosition,1.0).xyz - vec4(lightPosition,1.0).xyz;
+        // lightToFrag = (fPosition - lightPosition);
+        // float lightFragDistance = length(lightToFrag);
+        //
+        // float shadowRange = shadowRangeNearFar.y - shadowRangeNearFar.x;
+        // float normalizedLFDist = (lightFragDistance - shadowRangeNearFar.x)/shadowRange;
+        // if(shadowValue-0.005>= normalizedLFDist){
+           totalColor+= (diffuse * (3.0*cLight+fcolor)/4.0+specular_color);
+        // }
 
-        if(shadowValue+0.03 >= lightFragDistance){
-          totalColor+= (diffuse * (3.0*cLight+fcolor)/4.0+specular_color);
-        }
+
         gl_FragColor = vec4(totalColor, 1.0);
     }
 </script>
@@ -249,6 +253,7 @@
   uniform mat4 model;
   uniform vec3 lightdir;
   uniform vec3 lightColor;
+  varying vec3 fPosition;
   void main(void) {
       pos = (view * model * vec4(vPosition, 1.0)).xyz;
       gl_Position = proj * view * model * vec4(vPosition, 1.0);
@@ -258,6 +263,7 @@
       cLight = lightColor;
       tModel = view * model;
       fTexCoord = vTexCorrd;
+      fPosition = (model*vec4(vPosition,1.0)).xyz;
   }
 </script>
 <script id="watercube-fs" type="notjs">
@@ -272,6 +278,11 @@
     uniform sampler2D uTexture;
     uniform sampler2D uNormMap;
     uniform mat4 tnModel;
+    uniform vec2 shadowRangeNearFar;
+    uniform sampler2D shadowMap;
+    uniform vec3 lightPosition;
+    varying vec3 fPosition;
+    uniform mat4 shadowMVP;
     const float ambient_coeff = 0.5;
     const float specular_coeff  = 0.5;
     const float specular_exp    = 150.0;
@@ -293,8 +304,19 @@
         float diffuse = .4*max(0.0,(dot(n, l)));
         vec3 ambient_color = ambient_coeff*max(0.0,(dot(shapeNormal, normal))) * tcolor;
         vec3 specular_color = specular_coeff * pow(max(0.0,dot(n,h)),specular_exp) * cLight;
-        vec3 totalColor = ambient_color + specular_color + diffuse * (cLight+tcolor)/2.0;
+        vec3 totalColor = ambient_color;
 
+        vec2 texc = ((shadowMVP*vec4(fPosition,1.0)).xy+1.0)/2.0;
+        float shadowValue = texture2D(shadowMap, texc).x;
+        vec3 lightToFrag = vec4(fPosition,1.0).xyz - vec4(lightPosition,1.0).xyz;
+        lightToFrag = (fPosition - lightPosition);
+        float lightFragDistance = length(lightToFrag);
+
+        float shadowRange = shadowRangeNearFar.y - shadowRangeNearFar.x;
+        float normalizedLFDist = (lightFragDistance - shadowRangeNearFar.x)/shadowRange;
+        if(shadowValue+0.01>= normalizedLFDist){
+          totalColor+= + specular_color + diffuse * (cLight+tcolor)/2.0;
+        }
         gl_FragColor = vec4(totalColor, 1.0);
       }
 </script>
@@ -374,20 +396,15 @@
 
         vec3 totalColor = ambient_color;
 
-
-
         vec2 texc = ((shadowMVP*vec4(fPosition,1.0)).xy+1.0)/2.0;
         float shadowValue = texture2D(shadowMap, texc).x;
-        vec3 shadowVec = texture2D(shadowMap, fTexCoord).xyz;
-
-        //float lightFragDistance = (shadowMVP*vec4(fPosition,1.0)).z;
         vec3 lightToFrag = vec4(fPosition,1.0).xyz - vec4(lightPosition,1.0).xyz;
         lightToFrag = (fPosition - lightPosition);
         float lightFragDistance = length(lightToFrag);
 
         float shadowRange = shadowRangeNearFar.y - shadowRangeNearFar.x;
         float normalizedLFDist = (lightFragDistance - shadowRangeNearFar.x)/shadowRange;
-        if(shadowValue+0.01>= normalizedLFDist){
+        if(shadowValue-0.005>= normalizedLFDist){
           totalColor+= + specular_color + diffuse * (cLight+tcolor)/2.0;
         }
 
@@ -530,6 +547,10 @@
   }
 </script>
 
+
+
+
+<!--this is for testing-->
 <script id="shadow-vs" type="nonjs">
   precision highp float;
 
@@ -564,7 +585,6 @@
   varying vec3 fNormal;
   varying vec2 fTexCoord;
   void main(){
-    //vec3 lightDir = normalize(lightPosition - fPosition);
     vec3 lightToFrag = (fPosition - lightPosition);
 
     float lightFragDistance = length(lightToFrag);
